kubernetes/apps/self-hosted/foundryvtt/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foundryvtt
spec:
  hostnames:
    - foundryvtt-11.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: foundryvtt
          namespace: self-hosted
          port: 30000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foundryvtt-internal
spec:
  hostnames:
    - fvtt.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: foundryvtt
          namespace: self-hosted
          port: 30000
